feat: logging persist and openapi
